# orangecashmachine

./: .coverage  .env.example  .gitignore  .importlinter  AGENTS.md  ARCHITECTURE.md  AUDITORIA_IMPORT_LINTER.txt  Dockerfile  Makefile  PLAN_AGENTS.md  README.md  REPORTE_SESION.md  audit_requirements.txt  base.yaml  dagster.yaml  dagster_defs.py  deploy.py  deploy_ocm.sh  docker-compose.override.yml  docker-compose.yml  main.py  migrate_market_data.sh  package-lock.json  pyproject.toml  pytest.ini  refactor.sh  requirements.txt  run.sh
.github/workflows/: ci.yml  ocm-cd.yml  ocm-ci.yml
BOTS/: deploy_all_bots.sh
BOTS/BTCUSDT/: deploy_bots_btcusdt.sh
_legacy/prefect_orchestration/: README.md  batch_flow.py  batch_tasks.py  deploy.py  entrypoint.py  exchange_tasks.py  post_processing.py  resample_flow.py
api/: __init__.py  deps.py  main.py  settings.py
api/auth/: jwt.py
api/middleware/: rate_limit.py
api/routers/: health.py
app/: __init__.py  run_live.py  run_market_data.py  run_paper.py
app/cli/: live.py  main.py  market_data.py  paper.py
app/use_cases/: __init__.py  execute_live.py  rebalance.py  run_live.py  run_paper.py
apps/api/: __init__.py  deps.py  main.py  settings.py
architecture/: importlinter.toml
backtesting/: __init__.py
conf/market_data/: feeds.yaml
config/: base.yaml  config.yaml  datasets.yaml  development.yaml  features.yaml  production.yaml  settings.yaml  test.yaml
config/env/: development.yaml  production.yaml  test.yaml
config/exchanges/: bybit.yaml  kucoin.yaml  kucoinfutures.yaml
config/observability/: logging.yaml  metrics.yaml  schema.yaml
config/pipeline/: historical.yaml  realtime.yaml  resample.yaml  schema.yaml
config/risk/: risk.yaml
config/storage/: datalake.yaml
core/: boundaries.py  utils.py
core/config/: __init__.py  credentials.py  env_vars.py  hydra_loader.py  lineage.py  loader.py  paths.py  pipeline.py  rules.py  run_registry.py  runtime.py  runtime_context.py  schema.py
core/logging/: __init__.py  bootstrap.py  config.py  filters.py  formats.py  processors.py  setup.py  sinks.py
core/observability/: __init__.py  bootstrap.py  config.py  filters.py  formats.py  logger.py  metrics.py  processors.py  sinks.py  tracing.py
core/runtime/: __init__.py  context.py  lineage.py  registry.py  run_config.py
dagster_assets/: __init__.py  asset_checks.py  bronze_ohlcv.py  partitions.py  repair_ohlcv.py  resample_ohlcv.py  resources.py
data_platform/: NOTES.md  __init__.py  ohlcv_utils.py  platform.py  protocols.py  repair_silver.py  validate_silver.py
data_platform/loaders/: gold_loader.py  gold_loader.py.legacy_parquet  market_data_loader.py
deploy/monitoring/: prometheus.yml
docs/adr/: 0001-bounded-context-market-data.md  0002-composition-root.md  0003-kafka-secondary-adapter.md  0004-ports-and-adapters-hexagonal.md  template.md
docs/audits/: 2026-05-market-data-audit.md
domain/: __init__.py  boundaries.py
domain/entities/: __init__.py  ohlcv.py
domain/events/: __init__.py  position_events.py  rebalance_events.py
domain/value_objects/: __init__.py  signal.py  timeframe.py
domains/market_data/: exceptions.py  main.py
infra/: __init__.py  alertmanager.yml  alerts.yml  prometheus.yml
infra/infrastructure/: __init__.py
infra/monitoring/: alertmanager.yml  alerts.yml  prometheus.yml
infra/observability/: __init__.py  adapters.py  runtime.py  server.py
infra/state/: __init__.py  adapters.py  cursor_store.py  factories.py  gap_registry.py  lateness_calibration.py  redis_stream.py
infrastructure/: __init__.py
infrastructure/dagster/: __init__.py  defs.py  resources.py
infrastructure/redis/: redis_stream.py
market_data/: exceptions.py  main.py
market_data/access/: platform.py
market_data/application/: __init__.py
market_data/connectors/: exchange_client_async.py
market_data/core/: __init__.py
market_data/domain/: __init__.py
market_data/gold/: __init__.py  transformer.py
market_data/infrastructure/: __init__.py
market_data/ingestion/: __init__.py
market_data/lineage/: __init__.py  tracker.py
market_data/observability/: __init__.py  metrics.py
market_data/orchestration/: config.py  entrypoint.py  post_processing.py
market_data/pipeline/: __init__.py
market_data/ports/: __init__.py  exchange.py  gap_registry.py  market_data_source.py  observability.py  quality.py  state.py  storage.py  storage_factory.py
market_data/processing/: __init__.py  exceptions.py  transformer.py
market_data/quality/: __init__.py  anomaly_registry.py  pipeline.py
market_data/safety/: __init__.py  environment_validator.py  execution_guard.py  guard_context.py
market_data/storage/: __init__.py  storage_protocol.py
market_data/streaming/: __init__.py  consumer.py  context.py  dedup.py  metrics.py  payloads.py  publisher.py  router.py  source.py
market_data_system/: main.py
market_data_system/config/: settings.yaml
ocm/: __init__.py
ocm/config/: __init__.py  _contract.py  credentials.py  env_vars.py  hydra_loader.py  paths.py  pipeline.py  schema.py
ocm/observability/: __init__.py  bootstrap.py  config.py  filters.py  formats.py  logger.py  metrics_runtime.py  processors.py  prometheus.py  pushers.py  sinks.py
ocm/runtime/: context.py  environment_validator.py  guard.py  guard_context.py  lineage.py  registry.py  run_config.py
ocm_platform/: boundaries.py  utils.py
ocm_platform/config/: credentials.py  env_vars.py  lineage.py  paths.py  pipeline.py  run_registry.py  runtime.py  runtime_context.py  schema.py
ocm_platform/control_plane/: __init__.py
ocm_platform/dagster_runtime/: __init__.py
ocm_platform/observability/: __init__.py  bootstrap.py  filters.py  logger.py  metrics.py  processors.py  pushers.py  sinks.py
portfolio/: __init__.py
scripts/: .gitignore  arch_graph.py  arch_metrics.py  calibrate_lateness.py  forbidden_frameworks.py  iceberg_compact_and_maintain.py  iceberg_reset_and_migrate.py  migrate_silver_to_iceberg.py
shared/: __init__.py
tests/: conftest.py  test_env_overrides.py
trading/: __init__.py  engine.py  run_paper.py
(+528 files in other folders)
