[build-system]
requires = [
    "hatchling>=1.16.0",
]
build-backend = "hatchling.build"

[project]
name = "orangecashmachine"
version = "0.3.0"
description = "Pipeline profesional de ingestión, procesamiento y almacenamiento de datos de mercado cripto — arquitectura medallion (Bronze/Silver/Gold), orquestación Dagster, data lakehouse Iceberg/DuckDB, observabilidad Prometheus"
readme = "README.md"
authors = [
    { name = "orangemusic" },
]
requires-python = ">=3.11,<3.14"
keywords = [
    "trading",
    "algorithmic-trading",
    "market-data",
    "crypto",
    "data-pipeline",
    "data-lakehouse",
    "iceberg",
    "dagster",
    "ccxt",
    "ohlcv",
    "quant",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "dagster>=1.7.0,<2.0",
    "dagster-webserver>=1.7.0,<2.0",
    "pydantic==2.8.2",
    "pydantic-settings>=2.13.1,<3.0",
    "pandera>=0.20.0",
    "numpy>=2.0,<3.0",
    "pandas>=2.3,<3.0",
    "pyarrow>=17.0,<20.0",
    "ccxt==4.3.58",
    "loguru==0.7.2",
    "structlog>=24.1.0,<25.0",
    "httpx>=0.27.0,<1.0",
    "prometheus-client>=0.20.0,<1.0",
    "pyyaml==6.0.2",
    "python-dotenv>=1.0,<3.0",
    "hydra-core>=1.3.2,<2.0",
    "aioresilience==0.2.1",
    "aiometer>=0.10.0",
    "pybreaker==1.4.1",
    "redis>=7.4.0,<8.0",
    "aiokafka>=0.11.0,<1.0",
    # pyiceberg: <1.0 — API pública no estabilizada en 1.x todavía.
    # >=0.9.1: requiere TimestampType microsecond epoch (int) en scan filters.
    # Actualizar solo tras smoke test completo en staging (iceberg_storage tests).
    # pyiceberg: <1.0 — API pública no estabilizada en 1.x todavía.
    # >=0.9.1: requiere TimestampType microsecond epoch (int) en scan filters.
    # Actualizar solo tras smoke test completo en staging (iceberg_storage tests).
    "pyiceberg[pyarrow,sql-sqlite]>=0.9.1,<1.0",
    "duckdb>=1.5.1,<2.0",
    "fastapi>=0.111.0,<1.0",
    "uvicorn[standard]>=0.14.0,<0.29.0",
    "python-jose[cryptography]>=3.3.0,<4.0",
    "polars[rtcompat]>=1.40.1",
]

[project.license]
text = "MIT"

[project.scripts]
ocm = "app.cli.main:main"
ocm-api = "api.main:serve"
live = "app.cli.live:main"
paper = "app.cli.paper:main"

[project.urls]
Repository = "https://github.com/orangemusic/orangecashmachine"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0,<8.0",
    "sphinx-autodoc-typehints>=1.22,<2.0",
]
ci = [
    "pre-commit>=3.3,<4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "mypy>=1.9,<2.0",
    "ruff>=0.4,<1.0",
    "import-linter>=2.1,<3.0",
    "structlog>=24.4.0",
    "httpx>=0.28.1",
    "bandit>=1.9.4",
    "pre-commit>=3.8.0",
]

[tool.importlinter]
# import-linter >= 2.1  (docs: https://import-linter.readthedocs.io)
# SSOT único: este bloque en pyproject.toml. El archivo .importlinter fue eliminado.
# Cada contrato tiene número único secuencial (BC-NN) para trazabilidad en PRs.
# Orden: TIER 0 (shared/exceptions) → TIER 1 (market_data interno) → TIER 2 (BCs) → TIER 3+ (platform/infra/api/research)
# REGLA CI: un contrato BROKEN = merge bloqueado. Fail-fast sin excepciones.
include_external_packages = true
root_packages = [
    "market_data",
    "ocm",
    "trading",
    "portfolio",
    "app",
    "shared",
    "infrastructure",
    "research",
    "api",
]

# ─────────────────────────────────────────────────────────────────
# TIER 0 — fundamentos: dependency-free por definición
# ─────────────────────────────────────────────────────────────────

[[tool.importlinter.contracts]]
# shared solo puede depender de stdlib y third-party.
# Importar cualquier package interno rompe la independencia del kernel compartido.
name = "BC-01: shared is dependency-free (stdlib + third-party only)"
type = "forbidden"
source_modules = [
    "shared",
]
forbidden_modules = [
    "market_data",
    "trading",
    "portfolio",
    "ocm",
    "infrastructure",
    "app",
    "api",
    "research",
]

[[tool.importlinter.contracts]]
# exceptions.py es SSOT de jerarquía de errores del bounded context.
# No puede importar nada del propio dominio — rompe la jerarquía de inicialización.
name = "BC-02: market_data.exceptions is stdlib-only (no internal imports)"
type = "forbidden"
source_modules = [
    "market_data.exceptions",
]
forbidden_modules = [
    "market_data.domain",
    "market_data.ports",
    "market_data.application",
    "market_data.adapters",
    "market_data.infrastructure",
]

# ─────────────────────────────────────────────────────────────────
# TIER 1 — market_data: capas internas (DIP + Clean Architecture)
# ─────────────────────────────────────────────────────────────────

[[tool.importlinter.contracts]]
# domain es el núcleo puro: cero dependencias hacia capas externas.
# Viola DIP si importa infrastructure, adapters, application o ports.
# Las policies en domain/ son World-B — actualmente tienen imports ilegales
# que son deuda técnica de la migración en curso (ver MIGRATION.md).
name = "BC-03: market_data.domain isolated from outer layers"
type = "forbidden"
source_modules = [
    "market_data.domain",
]
forbidden_modules = [
    "market_data.infrastructure",
    "market_data.adapters",
    "market_data.application",
    "market_data.quality",
]
ignore_imports = [
    # ── DEUDA TÉCNICA: domain/policies/ — migración World-A → World-B en curso ──
    # Estas importaciones son del pipeline activo (World A). Serán eliminadas cuando
    # domain/policies/ se refactorice para recibir sus dependencias por inyección.
    # Tracking: cada línea aquí debe tener un ticket/issue antes del próximo sprint.
    "market_data.domain.policies.base -> market_data.ports.outbound.storage",
    "market_data.domain.policies.base -> market_data.ports.outbound.state",
    "market_data.domain.policies.base -> market_data.ports.outbound.gap_registry",
    "market_data.domain.policies.base -> market_data.ports.outbound.kafka_producer",
    # ── DEUDA TÉCNICA: domain/value_objects/ — lazy imports de métricas ──
]

[[tool.importlinter.contracts]]
# ports son contratos puros (Protocols/ABCs).
# Solo pueden depender del dominio propio. Nunca de implementaciones concretas.
# NOTA: ports/outbound/kafka_producer.py exporta constantes (TOPIC_OHLCV_RAW etc.)
# que actualmente son usadas desde domain/policies/. Esas constantes deben migrar
# a domain/events/ como parte de la refactorización World-A → World-B.
# El import real domain.policies → infrastructure.kafka.payloads está cubierto en BC-03.
name = "BC-04: market_data.ports depend only on domain"
type = "forbidden"
source_modules = [
    "market_data.ports",
]
forbidden_modules = [
    "market_data.infrastructure",
    "market_data.adapters",
    "market_data.application",
]

[[tool.importlinter.contracts]]
# application orquesta use cases a través de ports — nunca instancia infraestructura directamente.
# Las importaciones directas de infrastructure en application son World-A en migración.
name = "BC-05: market_data.application isolated from infrastructure and adapters"
type = "forbidden"
source_modules = [
    "market_data.application",
]
forbidden_modules = [
    "market_data.adapters",
    "market_data.infrastructure",
]
ignore_imports = [
    # ── DEUDA TÉCNICA: pipelines/ usan infraestructura concreta — World A activo ──
    # Serán refactorizados para recibir implementaciones por inyección de dependencias.
    "market_data.application.consumers.quality_consumer -> market_data.infrastructure.lineage.tracker",
    "market_data.application.pipelines.derivatives_pipeline -> market_data.infrastructure.storage.silver.derivatives_storage",
    "market_data.application.pipelines.derivatives_pipeline -> market_data.infrastructure.storage.iceberg.catalog",
    "market_data.application.pipelines.ohlcv_pipeline -> market_data.infrastructure.kafka.producer",
    "market_data.application.pipelines.ohlcv_pipeline -> market_data.infrastructure.storage.bronze.bronze_storage",
    "market_data.application.pipelines.ohlcv_pipeline -> market_data.infrastructure.storage.iceberg.iceberg_storage",
    "market_data.application.pipelines.ohlcv_pipeline -> market_data.infrastructure.observability.metrics",
    "market_data.application.pipelines.ohlcv_pipeline -> market_data.infrastructure.observability.pipeline_metrics",
    # repair también usa métricas Prometheus directamente — World A, mismo patrón que pipelines
    "market_data.application.strategies.repair -> market_data.infrastructure.observability.metrics",
    "market_data.application.pipelines.resample_pipeline -> market_data.infrastructure.observability.metrics",
    "market_data.application.pipelines.trades_pipeline -> market_data.infrastructure.storage.silver.trades_storage",
    "market_data.application.pipelines.trades_pipeline -> market_data.infrastructure.storage.iceberg.catalog",
    "market_data.application.use_cases.ohlcv_transformer -> market_data.infrastructure.lineage.tracker",
]

[[tool.importlinter.contracts]]
# Los adaptadores concretos no pueden importar infraestructura directamente.
# Deben recibir dependencias por inyección o usar ports de storage.
name = "BC-06: market_data.adapters isolated from infrastructure"
type = "forbidden"
source_modules = [
    "market_data.adapters",
]
forbidden_modules = [
    "market_data.infrastructure",
]
ignore_imports = [
    # ── DEUDA TÉCNICA: adapters/ con imports directos de infrastructure — World A ──
    "market_data.adapters.inbound.rest.derivatives_fetcher -> market_data.infrastructure.storage.silver.derivatives_storage",
    "market_data.adapters.inbound.rest.ohlcv_fetcher -> market_data.infrastructure.observability.metrics",
    "market_data.adapters.inbound.rest.trades_fetcher -> market_data.infrastructure.storage.silver.trades_storage",
    "market_data.adapters.outbound.exchange.ccxt_adapter -> market_data.infrastructure.observability.metrics",
    "market_data.adapters.outbound.storage.gold_reader -> market_data.infrastructure.storage.iceberg.catalog",
    "market_data.adapters.outbound.storage.iceberg_factory -> market_data.infrastructure.storage.iceberg.iceberg_storage",
]

[[tool.importlinter.contracts]]
# infrastructure NO puede importar application en nivel módulo — viola DIP.
# EXCEPCIONES DOCUMENTADAS (Composition Root legítimo):
#   · infrastructure/dagster/assets/*.py — orquestadores Dagster; por definición
#     son el punto de ensamblaje del sistema. Conocen use cases por diseño.
#   · market_data.infrastructure.bootstrap.container — OCMContainer es el único
#     Composition Root interno. El import de PipelineOrchestrator/ResampleUseCase
#     es lazy (dentro de método build()) — no contamina el grafo en import-time.
# REGLA: ningún otro módulo de infrastructure puede importar application.
name = "BC-07: market_data.infrastructure does not import application (DIP)"
type = "forbidden"
source_modules = [
    "market_data.infrastructure",
    "infrastructure",
]
forbidden_modules = [
    "market_data.application",
]
ignore_imports = [
    # Composition Root: dagster assets ensamblan use cases con infrastructure.
    "infrastructure.dagster.assets.bronze_ohlcv -> market_data.application",
    "infrastructure.dagster.assets.repair_ohlcv -> market_data.application",
    "infrastructure.dagster.assets.resample_ohlcv -> market_data.application",
    # Composition Root interno: OCMContainer (lazy import en método build()).
    "market_data.infrastructure.bootstrap.container -> market_data.application",
]

[[tool.importlinter.contracts]]
# Orden de capas: las dependencias fluyen solo hacia adentro (domain es el núcleo).
# domain < ports < application < adapters < infrastructure
#
# NOTA sobre pipeline_orchestrator → CCXTAdapter:
# Los imports de CCXTAdapter (líneas 302/340/366) son LAZY (dentro de métodos).
# Import-linter analiza grafo estático — estos imports NO generan arista en el
# grafo. No se necesita ignore_imports. Verificar con:
#   grep -n "from market_data.adapters" \
#     packages/market_data/application/use_cases/pipeline_orchestrator.py
name = "BC-08: market_data layer order (domain < ports < application < adapters < infrastructure)"
type = "layers"
layers = [
    "market_data.infrastructure",
    "market_data.adapters",
    "market_data.application",
    "market_data.ports",
    "market_data.domain",
]

[[tool.importlinter.contracts]]
# domain no puede importar librerías de infraestructura de terceros.
# Un import de pyiceberg/redis/ccxt en domain acopla el núcleo a implementaciones concretas.
name = "BC-09: market_data.domain does not import infrastructure third-party libs"
type = "forbidden"
source_modules = [
    "market_data.domain",
]
forbidden_modules = [
    "pyiceberg",
    "redis",
    "ccxt",
    "dagster",
    "sqlalchemy",
    "boto3",
]

# ─────────────────────────────────────────────────────────────────
# TIER 2 — bounded contexts: independencia entre packages
# ─────────────────────────────────────────────────────────────────

[[tool.importlinter.contracts]]
# market_data no puede importar bounded contexts de negocio.
# El flujo legítimo: trading/portfolio consumen datos de market_data, nunca al revés.
name = "BC-10: market_data does not import sibling bounded contexts"
type = "forbidden"
source_modules = [
    "market_data",
]
forbidden_modules = [
    "trading",
    "portfolio",
]

[[tool.importlinter.contracts]]
# Strategies son pure functions sobre datos. No conocen ejecución ni analytics.
# Viola SRP y crea acoplamiento circular si importan execution.
name = "BC-11: trading.strategies isolated from execution and analytics"
type = "forbidden"
source_modules = [
    "trading.strategies",
]
forbidden_modules = [
    "trading.execution",
    "trading.analytics",
]

[[tool.importlinter.contracts]]
# Risk es un guard layer previo a ejecución.
# Importar execution desde risk crea dependencia circular implícita.
name = "BC-12: trading.risk isolated from execution"
type = "forbidden"
source_modules = [
    "trading.risk",
]
forbidden_modules = [
    "trading.execution",
]

[[tool.importlinter.contracts]]
# portfolio gestiona estado de posiciones. No orquesta ejecución ni estrategias.
# Comunicación legítima: por eventos (PositionOpened etc.), no por importación directa.
name = "BC-13: portfolio isolated from trading execution and strategies"
type = "forbidden"
source_modules = [
    "portfolio",
]
forbidden_modules = [
    "trading.execution",
    "trading.strategies",
]

# ─────────────────────────────────────────────────────────────────
# TIER 3 — platform (ocm): config/runtime, sin lógica de negocio
# ─────────────────────────────────────────────────────────────────

[[tool.importlinter.contracts]]
# ocm es la plataforma de config, runtime y observabilidad.
# No contiene lógica de negocio: no puede importar BCs de dominio.
name = "BC-14: ocm platform has no business logic dependencies"
type = "forbidden"
source_modules = [
    "ocm",
]
forbidden_modules = [
    "market_data",
    "trading",
    "portfolio",
]

# ─────────────────────────────────────────────────────────────────
# TIER 4 — infrastructure: orquestación, sin dominio de negocio
# ─────────────────────────────────────────────────────────────────

[[tool.importlinter.contracts]]
# infrastructure.dagster.assets puede importar market_data ports y application.
# NO puede instanciar infraestructura de storage ni el ccxt_adapter directamente.
# CORRECCIÓN: módulo existe en root_packages — error anterior era root_package = market_data
# en .importlinter (solo indexaba market_data, infrastructure no estaba en el graph).
name = "BC-15: infrastructure.dagster.assets does not bypass ports layer"
type = "forbidden"
source_modules = [
    "infrastructure.dagster.assets",
]
forbidden_modules = [
    "market_data.infrastructure.storage",
    "market_data.adapters.outbound.exchange.ccxt_adapter",
]

[[tool.importlinter.contracts]]
# infrastructure (dagster, redis) no puede importar execution, portfolio, app ni api.
# Solo puede depender de ocm (plataforma) y market_data (datos via ports).
name = "BC-16: infrastructure depends only on platform and market_data abstractions"
type = "forbidden"
source_modules = [
    "infrastructure",
]
forbidden_modules = [
    "trading",
    "portfolio",
    "app",
    "api",
]

# ─────────────────────────────────────────────────────────────────

[[tool.importlinter.contracts]]
# api es la capa de presentación. Ningún dominio puede depender de ella.
# Una dependencia hacia api desde dominio invierte el flujo de control.
name = "BC-18: no upward dependency to api layer"
type = "forbidden"
source_modules = [
    "ocm",
    "market_data",
    "trading",
    "app",
    "portfolio",
    "infrastructure",
]
forbidden_modules = [
    "api",
]

# ─────────────────────────────────────────────────────────────────
# TIER 6 — research: consumer de solo lectura
# ─────────────────────────────────────────────────────────────────

[[tool.importlinter.contracts]]
# research es analytics post-hoc. Los dominios no saben que existe.
name = "BC-19: no upward dependency to research layer"
type = "forbidden"
source_modules = [
    "market_data",
    "trading",
    "portfolio",
    "ocm",
    "infrastructure",
]
forbidden_modules = [
    "research",
]

[[tool.importlinter.contracts]]
# research consume datos ya procesados (gold layer). No modifica estado operacional.
name = "BC-20: research is a read-only analytics consumer"
type = "forbidden"
source_modules = [
    "research",
]
forbidden_modules = [
    "trading",
    "portfolio",
    "app",
    "api",
    "infrastructure",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
log_cli = true
log_cli_level = "DEBUG"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E402",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = [
    "tests/",
    ".venv/",
]

[tool.hatch.build.targets.wheel]
packages = [
    "packages/market_data",
    "packages/trading",
    "packages/portfolio",
    "ocm",
    "infrastructure/dagster",
    "infrastructure/redis",
    "apps/api",
    "apps/app",
    "apps/research",
    "shared",
]

[tool.hatch.build.targets.wheel.sources]
"packages/market_data"  = "market_data"
"packages/trading"      = "trading"
"packages/portfolio"    = "portfolio"
"infrastructure/dagster" = "infrastructure/dagster"
"infrastructure/redis"  = "infrastructure/redis"
"apps/api"              = "api"
"apps/app"              = "app"
"apps/research"         = "research"

[[tool.importlinter.contracts]]
# ocm.config.paths es la SSOT de resolución de rutas del repo.
# Solo hydra_loader puede importarla (lazy, bootstrap), y solo para _find_config_dir.
# Ningún otro módulo de ocm.config debe depender de paths — evita ciclos.
name = "BC-21: ocm.config bootstrap — paths es SSOT de root resolution"
type = "forbidden"
source_modules = [
    "ocm.config.pipeline",
    "ocm.config.schema",
    "ocm.config.layers",
    "ocm.config.loader",
    "ocm.config.structured",
]
forbidden_modules = [
    "ocm.config.paths",
]
# allow_indirect_imports: ocm.config.hydra_loader es el único importador autorizado
# de ocm.config.paths (bootstrap, lazy). La cadena pipeline → hydra_loader → paths
# es intencional — hydra_loader actúa como intermediario de acceso controlado.
# Solo se prohíbe importación directa desde source_modules.
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name            = "BC-22: ocm.runtime.state — solo adapters/factories son API pública"
type            = "forbidden"
source_modules  = [
    "market_data",
    "trading",
    "app",
    "infrastructure",
]
forbidden_modules = [
    "ocm.runtime.state.cursor_store",
    "ocm.runtime.state.gap_store",
    "ocm.runtime.state.gap_registry",
    "ocm.runtime.state.lateness_calibration",
    "ocm.runtime.state.encoding",
    "ocm.runtime.state.retry",
]
# allow_indirect_imports: la fachada ocm.runtime.state.__init__ re-exporta estos
# módulos por diseño (Clean Architecture facade). Solo se prohíbe importación
# directa desde source_modules. Ver: https://import-linter.readthedocs.io/en/stable/contract_types.html
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name            = "BC-24: ocm.runtime — no puede importar de packages ni apps"
type            = "forbidden"
source_modules  = ["ocm.runtime"]
forbidden_modules = ["packages", "app", "infrastructure"]

[[tool.importlinter.contracts]]
name            = "BC-25: ocm.config — prohibido importar de ocm.runtime"
type            = "forbidden"
source_modules  = ["ocm.config"]
forbidden_modules = ["ocm.runtime"]

[[tool.importlinter.contracts]]
name = "BC-26: ocm — layering observability < config < runtime"
type = "layers"
layers = ["ocm.runtime", "ocm.config", "ocm.observability"]
ignore_imports = [
    "ocm.config.loader.env_resolver -> ocm.observability.bootstrap",
]

[[tool.importlinter.contracts]]
name            = "BC-27: ocm.runtime.state — no importa de ocm.runtime raíz"
type            = "forbidden"
source_modules  = ["ocm.runtime.state"]
forbidden_modules = [
    "ocm.runtime.context",
    "ocm.runtime.run_config",
    "ocm.runtime.guard",
    "ocm.runtime.guard_context",
    "ocm.runtime.lineage",
    "ocm.runtime.registry",
    "ocm.runtime.environment_validator",
]
